# pre-arxiv

./: .env.example  .gitignore  README.md  SECURITY.md  db.js  package-lock.json  package.json  seed.js  server.js  tsconfig.json
data/: prearxiv.db-shm  prearxiv.db-wal
lib/: ambient.d.ts  api-auth.js  api.js  audit.js  auth.js  citation.js  email.js  helpers.js  manifest.js  migrations.js  oaipmh.js  openapi.js  totp.js  util.js  versions.js  webhooks.js  zenodo.js
mcp/: README.md  package-lock.json  package.json  server.js
routes/: admin.js  auth.js  comments.js  discovery.js  home.js  manuscript.js  me_account.js  profile.js  social.js  static.js  votes.js
rust/: .gitignore  Cargo.toml  README.md
rust/migrations/: 0001_initial_schema.sql  0002_fts5_and_triggers.sql  0003_licenses.sql  0004_email_verification.sql  0005_password_reset.sql  0006_pending_email_changes.sql  0007_manuscript_versions.sql  0008_secondary_categories.sql  0009_notifications.sql  0010_user_totp.sql  0011_source_path.sql  0012_email_at_rest_encryption.sql  0013_verified_scholar.sql  0014_prexiv_id_aliases.sql  0015_orcid_oauth.sql  0016_github_oauth.sql
rust/pg_migrations/: 0002_github_oauth.sql
rust/src/: api_auth.rs  auth.rs  categories.rs  compile.rs  crockford.rs  crypto.rs  db.rs  email.rs  email_change.rs  error.rs  github.rs  helpers.rs  licenses.rs  main.rs  markdown.rs  notifications.rs  orcid.rs  passwords.rs  pdf_watermark.rs  state.rs  totp.rs  verify.rs  versions.rs
rust/src/models/: comment.rs  manuscript.rs  mod.rs  user.rs  vote.rs
rust/src/routes/: admin.rs  api.rs  auth.rs  cite.rs  comments.rs  feed.rs  feeds.rs  flags.rs  follow.rs  forgot.rs  health.rs  home.rs  listings.rs  manuscript.rs  manuscript_versions.rs  me.rs  me_account.rs  me_edit.rs  me_email.rs  me_password.rs  me_tokens.rs  mod.rs  notifications.rs  oai.rs  pages.rs  profile.rs  revise.rs  search.rs  static_routes.rs  submit.rs  two_factor.rs  verify.rs  versions_diff.rs  votes.rs  withdraw.rs
rust/src/templates/: admin.rs  auth.rs  cite.rs  feed.rs  forgot.rs  home.rs  layout.rs  listing.rs  manuscript.rs  me_account.rs  me_edit.rs  me_email.rs  me_password.rs  me_tokens.rs  mod.rs  notifications.rs  pages.rs  profile.rs  revise.rs  search.rs  submit.rs  two_factor.rs  versions.rs  versions_diff.rs
rust/src/templates/pages_content/: about.html  agent_support.html  dmca.html  guidelines.html  how_it_works.html  licenses.html  permissions.html  policies.html  privacy.html  tos.html
scripts/: README.md  backup.sh  deploy.sh  (+4 more)
(+58 files in other folders)
