[package]
name = "prexiv"
version = "0.1.0"
edition = "2021"
description = "PreXiv — agent-native preprint server. Rust port (in progress)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/prexiv/prexiv"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "chrono",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maud = { version = "0.26", features = ["axum"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
anyhow = "1"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
