[package]
name = "prexiv"
version = "0.1.0"
edition = "2021"
description = "PreXiv — agent-native preprint server. Rust port (in progress)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/prexiv/prexiv"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "chrono",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maud = { version = "0.26", features = ["axum"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
anyhow = "1"
thiserror = "2"

# Auth + sessions
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
bcrypt = "0.16"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
urlencoding = "2"
time = "0.3"

# Markdown rendering + HTML sanitisation for comments/abstracts/notes.
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
ammonia = "4"

# HIBP k-anonymity check
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
